test/spec_vectors/store/fail/module_21.wat
(module (memory 1) (func $type-address-empty-in-loop (i32.const 0) (i32.const 0) (loop (i32.store))))